# SBEngine

./: .gitignore  .gitmodules  CMakeLists.txt  SConstruct.py  buildweb.sh  generate.sh  genie.lua  lines.sh  lua_bind.py  make_test_textures.py  patch.py
Game/: Animation.h  Animator.h  Entities.h  Event.h  Floor.h  Game.cpp  Game.h  Oquonie.cpp  Oquonie.h  Player.cpp  Room.h  Stage.cpp  Stage.h  Tile.h  Walkthrough.cpp  Walkthrough.h  Wall.h  World.h
patches/: bgfx.patch  glfw.patch
pyutils/: __init__.py  atexit.py  misc.py  platform.py
resources/: app_config.yaml  fonts.yaml  glfw_config.yaml  ui_shaders.yaml
resources/menus/: ingame.yaml  intro_animation.yaml  loading_screen.yaml  main.yaml  splash_screen.yaml
scripts/: patch.py
shaders/: fs_ocornut_imgui.sc  fs_ocornut_imgui_paint.sc
shaders/UI/: fs_gui.sc  fs_gui_shadow.sc  fs_gui_tex.sc  fs_metalpattern.sc  fs_splash_shader.sc  fs_sword_background.sc  varying.def.sc  vs_gui.sc
shaders/basic_3d/: fs_unlit.sc  gamma.sh  varying.def.sc  vs_unlit.sc
shaders/imgui/: varying.def.sc  vs_imgui_image.sc  vs_ocornut_imgui.sc
shaders/text/: fs_text.sc  vs_text.sc
sources/: Application.cpp  Application.h  ApplicationFactory.h  Audio.cpp  Audio.h  EventIds.h  GaussKernelGen.h  IApplication.h  InputEventReciever.h  Object.cpp  Object.h  Texture.cpp  Texture.h  aabb.h  elo.h  lua.i  main.cpp  stack_vector.h  stb_compile_unit.c  views.h
sources/2DEngine/: Commands.h  Encoder.cpp  Encoder.h  Mesher.cpp  Mesher.h  Renderer2D.cpp  Renderer2D.h  ScriberTextBackend.cpp  ScriberTextBackend.h
sources/Audio/: Audio.cpp  Audio.h  IAudioStream.h  MP3Stream.cpp  MP3Stream.h  OGGStream.h  OGGtream.cpp  SineWave.cpp  SineWave.h
sources/Controller/: mcontroller.h
sources/EventDispatcher/: EventDispatcher.cpp  EventDispatcher.h
sources/ExpressionEvaluator/: Parser.h
sources/Game/: Animation.h  Dialog.h  Entities.h  Event.h  Game.cpp  Host.h  Keyboard.h  Music.h  Oquonie.cpp  Oquonie.h  Player.cpp  Player.h  Room.h  Spellbook.h  Stage.cpp  Stage.h  Step.h  Walkthrough.cpp  World.cpp  World.h
sources/MenuStateManager/: BaseMenuState.cpp  BaseMenuState.h  IMenuState.h  InGameMenuState.cpp  InGameMenuState.h  LuaMenuState.cpp  LuaMenuState.h  MenuFactory.cpp  MenuFactory.h  MenuStateManager.cpp  MenuStateManager.h  VGTestMenuState.cpp  VGTestMenuState.h
sources/Render/: DebugRenderer.cpp  DebugRenderer.h  GLDebugMessage.cpp  GLDebugMessage.h  Geometry.cpp  Geometry.h  Program.cpp  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Types.cpp  Types.h  VertexBuffer.cpp  VertexBuffer.h  VertexSpec.h  color.h  gl_headers.h  runtime_error.h
sources/Render/Image/: Image.cpp  Image.h
sources/Render/TextureReaders/: CommonImageFormatReader.cpp  IReader.h  PVRReader.cpp  PVRReader.h  TextureFormat.cpp  TextureFormat.h  TextureLoader.cpp
sources/Render/shader_reader/: ErrorHandlers.h  Lexer.h  MaterialSource.h  ShaderParser.h  SymbolSequence.h
sources/Serialization/: parser.h
sources/TTS/: TTS.cpp  TTS.h  TTS_data.cpp  TTS_data.h  unicode_lower.h
sources/UI/: Actor.h  Actors.h  Block.cpp  Block.h  ButtonActor.cpp  Emitters.cpp  Emitters.h  Enums.h  Parsers.h  UI.h  UI_Backend.cpp  UI_Backend.h  UI_Constraint_solver.cpp  UI_Constraint_solver.h  UI_Load.cpp  UI_Load.h  UI_Traversals.cpp  UI_Traversals.h  View.h  color.h
sources/UserInput/: UserInput.cpp  UserInput.h
sources/Vector/: demo.cpp  nanovg.cpp  nanovg.h  nanovg_backend.cpp
sources/luabind/: lua_loader.cpp  lua_loader.h
sources/misc/: bgfx_custom_printers.cpp  bgfx_custom_printers.h
sources/platform/: glfw_callbacks.cpp  glfw_callbacks.h  main.cpp
sources/utils/: aabb.h  math.h  stack_vector.h
tests/: main.cpp
